@@ -1391,7 +1391,8 @@ CREATE TABLE `qsqr_sample` (
   `comparison` varchar(15) COLLATE utf8_unicode_ci NOT NULL,
   `description` text COLLATE utf8_unicode_ci NOT NULL,
   PRIMARY KEY (`qsqr_sample_id`),
-  KEY `questionnaire_sample_quota_row_id` (`questionnaire_sample_quota_row_id`)
+  KEY `questionnaire_sample_quota_row_id` (`questionnaire_sample_quota_row_id`),
+  KEY `exclude_var` (`exclude_var`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci AUTO_INCREMENT=1 ;
 
 
@@ -1543,12 +1544,7 @@ CREATE TABLE `questionnaire_sample_quota_row` (
   `questionnaire_sample_quota_row_id` bigint(20) NOT NULL auto_increment,
   `questionnaire_id` bigint(20) NOT NULL,
   `sample_import_id` bigint(20) NOT NULL,
-  `lime_sgqa` varchar(255) collate utf8_unicode_ci NOT NULL,
-  `value` varchar(2048) collate utf8_unicode_ci NOT NULL,
-  `comparison` varchar(15) collate utf8_unicode_ci NOT NULL default 'LIKE',
   `completions` int(11) NOT NULL,
-  `exclude_var` char(128) collate utf8_unicode_ci NOT NULL,
-  `exclude_val` varchar(256) collate utf8_unicode_ci NOT NULL,
   `quota_reached` tinyint(1) NOT NULL default '0',
   `current_completions` int(11) NOT NULL default '0',
   `description` text collate utf8_unicode_ci NOT NULL,
@@ -1556,8 +1552,7 @@ CREATE TABLE `questionnaire_sample_quota_row` (
   `autoprioritise` tinyint(1) NOT NULL default '0' COMMENT 'Should this row have it''s priority automatically adjusted to 100 - (completions %)',
   PRIMARY KEY  (`questionnaire_sample_quota_row_id`),
   KEY `questionnaire_id` (`questionnaire_id`),
-  KEY `sample_import_id` (`sample_import_id`),
-  KEY `exclude_var` (`exclude_var`)
+  KEY `sample_import_id` (`sample_import_id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 
 --
