@@ -17,7 +17,8 @@ CREATE TABLE `qsqr_sample` (
   `comparison` varchar(15) COLLATE utf8_unicode_ci NOT NULL,
   `description` text COLLATE utf8_unicode_ci NOT NULL,
   PRIMARY KEY (`qsqr_sample_id`),
-  KEY `questionnaire_sample_quota_row_id` (`questionnaire_sample_quota_row_id`)
+  KEY `questionnaire_sample_quota_row_id` (`questionnaire_sample_quota_row_id`),
+  KEY `exclude_var` (`exclude_var`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci AUTO_INCREMENT=1 ;
 
 
@@ -29,6 +30,12 @@ INSERT INTO qsqr_sample (questionnaire_sample_quota_row_id,exclude_var,exclude_v
 SELECT questionnaire_sample_quota_row_id, exclude_var,exclude_val, 'LIKE'
 FROM questionnaire_sample_quota_row;
 
+ALTER TABLE `questionnaire_sample_quota_row`
+  DROP `lime_sgqa`,
+  DROP `value`,
+  DROP `comparison`,
+  DROP `exclude_var`,
+  DROP `exclude_val`;
 
 
 queXS 1.10.0 - Changes since 1.9.2
